# mini-opencode

./: .example.env  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  PROGRESS.md  PROGRESS_P2.md  QWEN.md  README.md  README.zh-CN.md  config.example.yaml  langgraph.example.json  main.py  mini-OpenCode 改进建议系统性评估报告.md  mini-OpenCode 项目系统性评估与优化建议方案.md  pyproject.toml  setup.py
.qoder/agents/: code-reviewer.md
docs/: MCP_HOT_RELOAD.md  mini-OpenCode 第二阶段系统性改进报告.md  welcome.md  项目对比构想分析报告.md
docs/work_summary/: 修复mincode按钮逻辑.md  鼠标选择与滑动条.md
skills/session-summarizer/: SKILL.md
skills/skill-creator/: SKILL.md
skills/skill-creator/references/: output-patterns.md  workflows.md
skills/skill-creator/scripts/: init_skill.py  quick_validate.py
skills/templates/python-api/: README.md  pyproject.toml
skills/templates/python-api/app/: main.py
skills/templates/react-component/: README.md  {{ComponentName}}.css  {{ComponentName}}.tsx
src/mini_opencode/: __init__.py  logging_config.py  main.py  project.py
src/mini_opencode/agents/: __init__.py  coding_agent.py  state.py  types.py  workflow.py
src/mini_opencode/agents/workers/: __init__.py  base_worker.py  coder_worker.py  debugger_worker.py  manager_agent.py
src/mini_opencode/cache/: __init__.py  file_cache.py  tool_cache.py
src/mini_opencode/cli/: __init__.py  app.py  history.py  theme.py
src/mini_opencode/cli/components/: __init__.py
src/mini_opencode/cli/components/chat/: __init__.py  chat_input.py  chat_view.py  loading_indicator.py  (+2 more)
src/mini_opencode/cli/controllers/: __init__.py  agent_controller.py  command_controller.py  suggestion_controller.py
src/mini_opencode/config/: __init__.py  config.py  memory_config.py
src/mini_opencode/exceptions/: __init__.py  agent_errors.py  base.py  file_errors.py  tool_errors.py
src/mini_opencode/models/: __init__.py  chat_model.py
src/mini_opencode/prompts/: __init__.py  template.py
src/mini_opencode/prompts/templates/: coding_agent.md
src/mini_opencode/services/: __init__.py  agent_service.py  memory_service.py  message_service.py  session_service.py  tool_service.py
src/mini_opencode/services/memory/: __init__.py  decay.py  importance.py  tiered_memory.py  types.py
src/mini_opencode/skills/: __init__.py  loader.py  parser.py  types.py
src/mini_opencode/tools/: __init__.py  reminders.py
src/mini_opencode/tools/date/: __init__.py  get_today_date.py
src/mini_opencode/tools/edit/: __init__.py  text_editor.py  tool.py
src/mini_opencode/tools/file/: __init__.py  edit.py  read.py  text_editor.py  write.py
src/mini_opencode/tools/fs/: __init__.py  grep.py  ignore.py  ls.py  tree.py
src/mini_opencode/tools/mcp/: __init__.py  load_mcp_tools.py  mcp_manager.py
src/mini_opencode/tools/quality/: __init__.py  check.py  fix.py
src/mini_opencode/tools/sandbox/: __init__.py  docker_executor.py  executor.py  manager.py  types.py
src/mini_opencode/tools/template/: __init__.py  fastapi_crud_generator.py  template.py
src/mini_opencode/tools/terminal/: __init__.py  bash.py  bash_terminal.py  tool.py
src/mini_opencode/tools/todo/: __init__.py  todo.py  todo_write.py  types.py
src/mini_opencode/tools/web/: __init__.py  web_crawl.py  web_search.py
(+11 files in other folders)
