[project]
name = "mini-opencode"
version = "0.1.0"
description = "mini-OpenCode is a lightweight experimental Coding Agent inspired by Deer-Code and OpenCode. It explores how LLMs can plan, reason, and iteratively write code with minimal infrastructure, aiming to provide a simple, hackable foundation for understanding and building agentic coding systems."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "firecrawl>=4.13.0",
    "jinja2>=3.1.6",
    "langchain>=1.2.4",
    "langchain-deepseek>=1.0.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-tavily>=0.2.16",
    "langgraph>=1.0.6",
    "pexpect>=4.9.0",
    "PyYAML>=6.0.1",
    "structlog>=25.5.0",
    "textual>=7.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "types-pexpect>=4.9.0.20260127",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.ruff]
select = ["E", "F", "W"]
line-length = 88
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disable_error_code = ["no-untyped-def", "no-untyped-call"]
